Intermediate: Fix horizontal scroll

--- a/app/sass/appstore.scss
+++ b/app/sass/appstore.scss
@@ -15,6 +15,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -28,15 +29,6 @@ body {
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
-}
-.container .text-muted {
-  margin: 20px 0;
-}
 
 html {
  	font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
@@ -318,7 +310,7 @@ a:active, a:focus {
 	outline: 0
 }
 
-._2LLuu_gpg9FBPewU-lOCGN {
+.footer2 {
     font-size: 16px;
 	bottom: 0;
 	left: 0;
@@ -330,14 +322,14 @@ a:active, a:focus {
 	border-bottom: 20px solid #0c2931
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul {
+.footer2 ul {
 	line-height: 1.5em;
 	margin: 0 0 1em;
 	padding: 0
 }
 
 @media screen and (min-width:53.75em) {
-    ._2LLuu_gpg9FBPewU-lOCGN ul {
+    .footer2 ul {
         float: left;
         line-height: 1.8em;
         margin-left: 1em;
@@ -345,63 +337,63 @@ a:active, a:focus {
     }
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li {
+.footer2 ul li {
 	font-weight: 800;
 	list-style: none;
 	padding-right: 1em
 }
 
 @media screen and (min-width:53.75em) {
-    ._2LLuu_gpg9FBPewU-lOCGN ul li {
+    .footer2 ul li {
         display: inline;
         text-align: left
     }
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li a {
+.footer2 ul li a {
 	color: hsla(0,0%,100%,.4);
 	text-decoration: none
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li a:focus, ._2LLuu_gpg9FBPewU-lOCGN ul li a:hover {
+.footer2 ul li a:focus, .footer2 ul li a:hover {
 	color: #fff
-}
+} 
 
 @media screen and (min-width:53.75em) {
-    .M7qygVPOtRJVQQy_QGmCd {
+    .inner-footer {
         float: left;
         margin-bottom: 0
     }
 }
 
 @media screen and (min-width:53.75em) {
-    ._32rAl_drLHxffZtdsJpz6r {
+    .terms-privacy {
         float: right
     }
 }
 
-._32rAl_drLHxffZtdsJpz6r li {
+.terms-privacy li {
 	font-size: .8em;
 	font-weight: 400
 }
 
-.M7qygVPOtRJVQQy_QGmCd img {
+.inner-footer img {
 	height: 5em
 }
 
-.M7qygVPOtRJVQQy_QGmCd {
+.inner-footer {
 	margin-right: 1em;
 	margin-bottom: 1em
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul {
+.footer2 ul {
 	line-height: 1.5em;
 	margin: 0 0 1em;
 	padding: 0
 }
 
 @media screen and (min-width:53.75em) {
-    ._2LLuu_gpg9FBPewU-lOCGN ul {
+    .footer2 ul {
         float: left;
         line-height: 1.8em;
         margin-left: 1em;
@@ -409,24 +401,24 @@ a:active, a:focus {
     }
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li {
+.footer2 ul li {
 	font-weight: 800;
 	list-style: none;
 	padding-right: 1em
 }
 
 @media screen and (min-width:53.75em) {
-    ._2LLuu_gpg9FBPewU-lOCGN ul li {
+    .footer2 ul li {
         display: inline;
         text-align: left
     }
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li a {
+.footer2 ul li a {
 	color: hsla(0,0%,100%,.4);
 	text-decoration: none
 }
 
-._2LLuu_gpg9FBPewU-lOCGN ul li a:focus, ._2LLuu_gpg9FBPewU-lOCGN ul li a:hover {
+.footer2 ul li a:focus, .footer2 ul li a:hover {
 	color: #fff
 }
